Issue #32. Fix extra space in the map.

--- a/static/sass/partials/_footer.scss
+++ b/static/sass/partials/_footer.scss
@@ -6,6 +6,10 @@
   margin-bottom: -6px;
 }
 
+.map iframe{
+  height: 15.2rem;
+}
+
 .cebu_title {
   h3 {
     font-weight: bold;
@@ -98,14 +102,20 @@
   }
 }
 
+@media (min-width: 640px) {
+  .map iframe {
+    height: 20.2rem;
+  }
+}
+
 @media (min-width: 768px) {
   .map iframe {
-    height: 350px;
+    height: 25.2rem;
   }
 }
 
 @media (min-width: 992px) {
   .map iframe {
-    height: 475px;
+    height: 33.2rem;
   }
 }
